# Bitcoin_with_rust

./: README.md  cargo.toml
lib/: Cargo.toml  tx.cbor
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.priv.cbor  alice.pub.pem  block.cbor
miner/src/: main.rs
