[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.5"
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
sha256 = "1.5.0"
spki = "0.7.3"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["net"] }
uint = "0.10.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
