[package]
name = "miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.8", features = ["derive"] }
flume = "0.11.0"
lib = { path = "../lib" }
tokio = { version = "1.40.0", features = ["full"] }
